k8s/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 5000
