k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python-app-svc
            port:
              number: 8085
---
